syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package derailed.gateway;

service Guild {
    rpc dispatch_guild (Interchange) returns (google.protobuf.Empty);
    rpc dispatch_user (Interchange) returns (google.protobuf.Empty);
    rpc dispatch_bulk (BulkInterchange) returns (google.protobuf.Empty);
    rpc get_metadata (GuildInfo) returns (GuildMetadata);
    rpc update_presence (UpdatePresence) returns (google.protobuf.Empty);
}

message Interchange {
    string t = 1;
    int64 id = 2;
    google.protobuf.Any d = 3;
}

message BulkInterchange {
    string t = 1;
    repeated int64 uids = 2;
    Interchange d = 3;
}

message GuildInfo {
    int64 id = 1;
}

message GuildMetadata {
    bool available = 1;
    int32 presences = 2;
}

message UpdatePresence {
    int64 user_id = 1;
    int32 status = 2;
    repeated google.protobuf.Any activities = 3;
}
